@@ -28,7 +28,7 @@ require 'ffi' # sudo gem install ffi
 module Rufus
   module Tokyo
 
-    VERSION = '0.1.6'
+    VERSION = '0.1.7'
 
     #
     # A common error class
