@@ -229,11 +229,41 @@ module Rufus
       #
       # Returns an array with all the keys in the databse
       #
-      def keys
-        a = []
-        lib.abs_iterinit(@db)
-        while (k = (lib.abs_iternext2(@db) rescue nil)); a << k; end
-        a
+      # With no options given, this method will return all the keys (strings)
+      # in a Ruby array.
+      #
+      #   :prefix --> returns only the keys who match a given string prefix
+      #
+      #   :limit --> returns a limited number of keys
+      #
+      #   :native --> returns an instance of Rufus::Tokyo::List instead of
+      #     a Ruby Hash, you have to call #free on that List when done with it !
+      #     Else you're exposing yourself to a memory leak.
+      #
+      def keys (options={})
+
+        if pref = options[:prefix]
+
+          l = lib.abs_fwmkeys2(@db, pref, options[:limit] || -1)
+          l = Rufus::Tokyo::List.new(l)
+          options[:native] ? l : l.release
+
+        else
+
+          limit = options[:limit] || -1
+          limit = nil if limit < 1
+
+          l = options[:native] ? Rufus::Tokyo::List.new : []
+
+          lib.abs_iterinit(@db)
+
+          while (k = (lib.abs_iternext2(@db) rescue nil))
+            break if limit and l.size >= limit
+            l << k
+          end
+
+          l
+        end
       end
     end
 
